feat: change to dark theme based on device

--- a/App/I18n/Language/en.json
+++ b/App/I18n/Language/en.json
@@ -3,5 +3,6 @@
     "settings": "Settings",
     "details": "Details",
     "lang": "English",
-    "lang2": "Spanish"
+    "lang2": "Spanish",
+    "search": "Search"
 }
