--- a/App/I18n/Language/sp.json
+++ b/App/I18n/Language/sp.json
@@ -3,5 +3,6 @@
     "settings": "Ajustes",
     "details": "Detalles",
     "lang": "Inglés",
-    "lang2": "Español"
+    "lang2": "Español",
+    "search": "Buscar"
 }
